error.txt
file.c: In function ‘main’:
file.c:6:14: error: expected ‘;’ before ‘return’
    6 |  printf("!!")
      |              ^
      |              ;
    7 |  return 0;
      |  ~~~~~~       
file.c:4:14: warning: unused variable ‘c’ [-Wunused-variable]
    4 |  int a=5, b, c;
      |              ^
file.c:4:11: warning: unused variable ‘b’ [-Wunused-variable]
    4 |  int a=5, b, c;
      |           ^
